[gd_scene load_steps=4 format=2]

[ext_resource path="res://prefabs/PrefabRoom.gd" type="Script" id=1]
[ext_resource path="res://Tileset.tres" type="TileSet" id=2]
[ext_resource path="res://prefabs/Shop.gd" type="Script" id=3]

[node name="Prefabs" type="Node2D"]
script = ExtResource( 1 )

[node name="Shop" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 65536, 1, 0, 65537, 8, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 13, 0, 65542, 1, 0, 131072, 1, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 1, 0, 196608, 1, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 1, 0, 262144, 1, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 1, 0, 327680, 1, 0, 327681, 5, 0, 327682, 5, 0, 327683, 5, 0, 327684, 5, 0, 327685, 5, 0, 327686, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0 )
script = ExtResource( 3 )

[node name="Meg" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 3, 1, 0, 4, 1, 0, 5, 1, 0, 65539, 1, 0, 65540, 6, 0, 65541, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 16, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 196608, 1, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 1, 0, 262144, 1, 0, 262145, 5, 0, 262146, 7, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 7, 0, 262151, 5, 0, 262152, 1, 0, 327680, 1, 0, 327681, 5, 0, 327682, 5, 0, 327683, 5, 0, 327684, 2, 0, 327685, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 1, 0, 393216, 1, 0, 393217, 5, 0, 393218, 7, 0, 393219, 5, 0, 393220, 5, 0, 393221, 5, 0, 393222, 7, 0, 393223, 5, 0, 393224, 1, 0, 458752, 1, 0, 458753, 5, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 1, 0, 524288, 1, 0, 524289, 5, 0, 524290, 7, 0, 524291, 5, 0, 524292, 5, 0, 524293, 5, 0, 524294, 7, 0, 524295, 5, 0, 524296, 1, 0, 589824, 1, 0, 589825, 5, 0, 589826, 5, 0, 589827, 5, 0, 589828, 0, 0, 589829, 5, 0, 589830, 5, 0, 589831, 5, 0, 589832, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0 )

[node name="Room1" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 5, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 1, 0, 131078, 1, 0, 196608, 1, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 1, 0, 262150, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 5, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0 )

[node name="Room2" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 65536, 1, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 1, 0, 131072, 1, 0, 131073, 5, 0, 131074, 7, 0, 131075, 5, 0, 131076, 7, 0, 131077, 5, 0, 131078, 1, 0, 196608, 1, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 1, 0, 262144, 1, 0, 262145, 5, 0, 262146, 7, 0, 262147, 5, 0, 262148, 7, 0, 262149, 5, 0, 262150, 1, 0, 327680, 1, 0, 327681, 5, 0, 327682, 5, 0, 327683, 5, 0, 327684, 5, 0, 327685, 5, 0, 327686, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0 )

[node name="Room3" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 65536, 1, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 11, 1, 65541, 11, 196611, 65542, 1, 0, 131072, 1, 0, 131073, 5, 0, 131074, 11, 0, 131075, 5, 0, 131076, 11, 65536, 131077, 5, 0, 131078, 1, 0, 196608, 1, 0, 196609, 5, 0, 196610, 11, 65536, 196611, 5, 0, 196612, 11, 65536, 196613, 5, 0, 196614, 1, 0, 262144, 1, 0, 262145, 5, 0, 262146, 11, 65536, 262147, 5, 0, 262148, 11, 131072, 262149, 5, 0, 262150, 1, 0, 327680, 1, 0, 327681, 11, 196609, 327682, 11, 131075, 327683, 5, 0, 327684, 5, 0, 327685, 5, 0, 327686, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0 )

[node name="Room4" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 5, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 131072, 1, 0, 131073, 5, 0, 131074, 13, 0, 131075, 5, 0, 131076, 13, 0, 131077, 5, 0, 131078, 1, 0, 196608, 1, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 1, 0, 262144, 1, 0, 262145, 5, 0, 262146, 13, 0, 262147, 5, 0, 262148, 13, 0, 262149, 5, 0, 262150, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 5, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0 )

[node name="Exit" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 65536, 14, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 131072, 5, 0, 131073, 5, 0, 131074, 6, 0, 131075, 5, 0, 131076, 5, 0, 196608, 5, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 262144, 5, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0 )
